--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,24 @@
     <string name="ward_number">Fullname</string>
     <string name="ward_location">Fullname</string>
 
+    <string name="faq_heading">Frequently Asked Questions:</string>
+    <string name="faq_question_heading">Q: </string>
+    <string name="faq_question">Question</string>
+    <string name="faq_answer_heading">A: </string>
+    <string name="faq_answer">Answer</string>
 
+    <string name="profile_heading">My Details</string>
+    <string name="profile_name">My Name is: </string>
+    <string name="patient_name">Name Surname</string>
+    <string name="profile_id">My ID is: </string>
+    <string name="patient_id">PatientID</string>
+    <string name="profile_dob">My DOB is: </string>
+    <string name="patient_dob">DD/MM/YYYY </string>
+    <string name="profile_allergies_true">I am allergic to: </string>
+    <string name="profile_allergies_false">I have no allergies.</string>
+    <string name="patient_allergies">Allegies</string>
+    <string name="profile_access_type">My access type is: </string>
+    <string name="patient_access_type">Answer</string>
 
     <!-- Calendar activity-->
     <!-- FAQ activity-->
