--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,15 @@
     <string name="patient_access_type">Answer</string>
 
     <!-- Calendar activity-->
-
+    <string name="hint_event_name">Event name</string>
+    <string name="eventsView">Events</string>
+    <string name="createEvent">New Event</string>
+    <string name="eventDetails">Event Details</string>
+    <string name="deleteEvent">Delete Event</string>
+    <string name="hint_event_starttime">Start time</string>
+    <string name="hint_event_endname">End time</string>
+    <string name="hint_event_date">Date</string>
+    <string name="hint_event_description">Details</string>
     <string name="Done">Done</string>
     <string name="Customized">Customized</string>
     <string name="Decorator">Decorator</string>
