-All events now showing in bold(changed final String[] months according to date format used in when finding gridcells matching the date -some minor refactoring to CalendarEvents -CreateEvent activity added(working) -ChangeEvent activity added(change event functionality working, need to sort out putExtra -calendar_events_view changed to allow editing events( extra row at event containing button "change event")

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,8 @@
     <string name="hint_event_name">Event name</string>
     <string name="eventsView">Events</string>
     <string name="createEvent">New Event</string>
-    <string name="eventDetails">Event Details</string>
+    <string name="changeEvent">Update event</string>
+
     <string name="deleteEvent">Delete Event</string>
     <string name="hint_event_starttime">Start time</string>
     <string name="hint_event_endname">End time</string>
