--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,41 +98,55 @@
 
     <string name="treatment_prep_hands_title">Washing hands</string>
     <string name="treatment_prep_hands_heading1">It is very important!</string>
-    <string name="treatment_prep_hands_text1">Don\'t forget to wash your hands and fistula before starting treatment. Keeping hands clean is one of the most important steps you can take to avoid getting sick and spreading germs to others. You can watch video about washing hands above.</string>
+    <string name="treatment_prep_hands_heading2">You can see how to wash your hands properly in the video below:</string>
+    <string name="treatment_prep_hands_text1">Don\'t forget to wash your hands and fistula before starting treatment. Keeping hands clean is one of the most important steps you can take to avoid getting sick and spreading germs to others.</string>
     <string name="treatment_prep_fluid_title">Fluid intake</string>
     <string name="treatment_prep_fluid_heading1">Don\'t drink extra fluid during dialysis</string>
-    <string name="treatment_prep_fluid_text_html"><![CDATA[<center>Did you know that:
-                    <li>It takes 10 hours for fluid to be absorbed from the intestine into your blood </li>
-                    <li>An average dialysis session lasts 3-5 hours, so excess fluid and potassium consumed during dialysis will <b>not</b> be dialysed off instantly, but absorbed into your blood <b>after dialysis</b> has finished</li>
-                    <li>Check with your Renal Nurse if you are unsure how much you can drink during dialysis</li>
-                    <i>Dialysis Tip: chew ice instead of drinking water</i></center>]]>
+    <string name="treatment_prep_fluid_text_html"><![CDATA[<center><p><b>Did you know that:</center></b><br>
+                    It takes 10 hours for fluid to be absorbed from the intestine into your blood.<br>
+                    An average dialysis session lasts 3-5 hours, so excess fluid and potassium consumed during dialysis will <b>not</b> be dialysed off instantly, but absorbed into your blood <b>after dialysis</b> has finished.<br>
+                    <br><b><center>Check with your Renal Nurse if you are unsure how much you can drink during dialysis.</center></b><br>
+                    <br>
+                    <i><center>Dialysis Tip: chew ice instead of drinking water</i></p></center>]]>
     </string>
 
     <string name="treatment_prep_food_title">Food</string>
     <string name="treatment_prep_food_heading1">Avoid high potassium rich foods!</string>
-    <string name="treatment_prep_food_text"><![CDATA[<center>If you tend to have high blood potassium levels,limit potassium rich foods like <b>dried fruit</b>, <b>milk and yoghurt</b>, <b>chocolate</b>, <b>nuts</b> and <b>potato crisps</b>
-                    Good nutrition is very important for haemodialysis
-                    Suitable snacks include:
-                    <li>Sandwiches with meat, fish, chicken, egg or cheese (Remember to take phosphate binders as these foods are high in phosphate)</li>
-                    <li>Plain butter or sponge cake</li><li>Scones, pikelets</li><li>A serve of lower potassium fruit (e.g. an apple, a mandarin or small tub tinned fruit)</li>
-                    <li>rice cakes, rice crackers, cracker bread with margarine, jam or cheese </li>
-                    <li>Sweet, jam or cream-filled biscuits</li>
-                     Did you know that:
-                     <li>It takes at least 5 hours for potassium to be absorbed into your blood – even longer for high fat foods (e.g. chocolate, crisps)
+    <string name="treatment_prep_food_text_html"><![CDATA[<center>If you tend to have high blood potassium levels,limit potassium rich foods like <b>dried fruit</b>, <b>milk and yoghurt</b>, <b>chocolate</b>, <b>nuts</b> and <b>potato crisps.</b>
+                    Good nutrition is very important for haemodialysis.
+                    <p><b>Suitable snacks include:</b><br>
+                    Sandwiches with meat, fish, chicken, egg or cheese(remember to take phosphate binders with these foods)<br>
+                    Plain butter or sponge cake<br>
+                    Scones, pikelets<br>
+                    A serve of lower potassium fruit (e.g. an apple, a mandarin or small tub tinned fruit)<br>
+                    Rice cakes, rice crackers, cracker bread with margarine, jam or cheese<br>
+                    Sweet, jam or cream-filled biscuits</p>
+                    <p><b>Did you know that:</b><br>
+                     It takes at least 5 hours for potassium to be absorbed into your blood – even longer for high fat foods (e.g. chocolate, crisps)</p>
                      </center>]]>
          </string>
+
 
     <string name="treatment_prep_nextStepButton">Next step</string>
     <string name="treatment_prep_startTreatmentButton">Start preparation</string>
 
 
     <string name="treatment_debrief_title">Shall we start?</string>
-    <string name="treatment_debrief_heading1">You are ready to begin treatment</string>
+    <string name="treatment_debrief_heading1">You are ready to begin treatment!</string>
     <string name="treatment_debrief_text1">Sit back and relax, the nurse will be with you in a moment. To start treatment, press the button below.</string>
     <string name="treatment_debrief_startTreatmentButton">Start Treatment</string>
 
+    <string name="treatment_second_stage_timer_title">Setting dialysis timer</string>
+    <string name="treatment_second_stage_timer_heading">Let\'s set a timer for your treatment</string>
+    <string name="treatment_second_stage_timer_text1">When you are connected to the dialyser, press the button below to set the treatment time.</string>
+    <string name="treatment_second_stage_timerButton">Set timer</string>
 
-
+    <string name="treatment_second_stage_title">Dialysis in progress...</string>
+    <string name="treatment_second_stage_heading1">You have</string>
+    <string name="treatment_second_stage_heading2">left</string>
+    <string name="treatment_second_stage_heading3">before your treatment finishes</string>
+    <string name="treatment_second_stage_abandonButton">Abandon treatment</string>
+    <string name="treatment_second_stage_abandonToast">Are you sure that you want to abandon your treatment? </string>
 
     <!-- Healthcheck check health activity-->
     <string name="healthcheck_title">Check health</string>
